--- a/project.html
+++ b/project.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
+<link rel="stylesheet" href="project.css">
 <body>
-    <script>
-        let user = prompt("enter the value")
-        console.log(user)
-        console.log(typeof(user))
-        a=parseFloat(user)
-        console.log(a)
-        console.log(typeof a)
+
+    <div class="box">
+        <h1>Hello</h1>
         
 
-    </script>
+    </div>
+
     
 </body>
 </html>
