--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class="box">
         <h1>Sree Hari Naidu from Kurnool</h1>
+        <h2>Im a full stack developer</h2>
         
 
     </div>
