--- a/index.html
+++ b/index.html
@@ -1,21 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>B G Sree Hari Naidu - Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="project.css">
 <body>
+  <header class="bg-primary text-white text-center py-5">
+    <h1>B G Sree Hari Naidu</h1>
+    <p>Email: <a class="text-white" href="mailto:boyagudisesreeharinaidu01@gmail.com">boyagudisesreeharinaidu01@gmail.com</a> | Phone: +91 9000478079</p>
+  </header>
 
-    <div class="box">
-        <h1>Sree Hari Naidu from Kurnool</h1>
-        <h2>Im a full stack developer</h2>
-        
+  <div class="container my-5">
+    <section>
+      <h2>Career Objective</h2>
+      <p>To lead a life with ethics and gratitude for all things that I have. To reach a great position in industry with experience and apply my ideas to solve real-world problems and improve the organization's stage.</p>
+    </section>
 
-    </div>
+    <section>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Java:</strong> Proficient with Java OOP’s, interfaces, collections, and problem solving.</li>
+        <li><strong>HTML & CSS:</strong> Hands-on experience with HTML and good knowledge of CSS.</li>
+        <li><strong>SQL:</strong> Experience with SQL and good knowledge in DQL.</li>
+      </ul>
+    </section>
 
-    
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li><strong>MCA:</strong> GATE Institute of Technology, Tirupati (2022-2024), 80%</li>
+        <li><strong>Bachelor of Arts (HEP):</strong> S.V. Arts College, Tirupati (2018-2021), 70%</li>
+        <li><strong>Intermediate (M.P.C):</strong> Visakha Defense Academy, Gajuvaka (2016-2018), 93.7%</li>
+        <li><strong>SSC:</strong> Sree Saraswathi Vidhya Nikethan High School (2016), 82%</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Internships and Projects</h2>
+      <ul>
+        <li><strong>Project:</strong> A Novel Approach to Improve Software Defect Prediction Accuracy Using Machine Learning (Tech Stack: Python, HTML, CSS)</li>
+        <li><strong>Internship:</strong> Dhee Coding Lab - Java Full Stack Development</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Certifications</h2>
+      <ul>
+        <li>NCC - C Certificate (B Grade)</li>
+        <li>Participated in Inter Group Competition (IGC Camp 2019)</li>
+      </ul>
+    </section>
+  </div>
+
+  <footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 B G Sree Hari Naidu. All rights reserved.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
